# py-ftmarkets

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  schema.json
.github/workflows/: ci.yml  publish.yml
docs/: ft_markets_api.md
src/ftmarkets/: __init__.py  api.py  cli.py  client.py  utils.py
src/ftmarkets/commands/: history.py  lookup.py
src/ftmarkets/extract/: schemas.py  scraper.py
tests/: smoke_test.py  test_api.py
tests/integration/: test_api_live.py
tests/unit/: test_api.py  test_datasource.py  test_strict_types.py  test_utils.py
tests/unit/extract/: test_scraper.py  test_scraper_error.py
