[project]
name = "py-ftmarkets"
version = "0.1.2"
description = "Financial Times (markets.ft.com) data source for Python"
readme = "README.md"
authors = [
    { name = "Roman Medvedev", email = "pypi@romavm.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "pydantic-market-data>=0.1.8",
]

[project.urls]
Homepage = "https://github.com/romamo/ftfinance"
Repository = "https://github.com/romamo/ftfinance"
Issues = "https://github.com/romamo/ftfinance/issues"

[project.scripts]
ftmarkets = "ftmarkets.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ftmarkets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "toml>=0.10.2",
    "ruff>=0.9.2",
    "pydantic-market-data>=0.1.8",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []



